Fix homepage, font sizes, text alignments, make it work better on iphone 5.

--- a/server/assets/css/custom.scss
+++ b/server/assets/css/custom.scss
@@ -2,7 +2,13 @@
 
 /* Custom CSS */
 
-body, h1, h2, h3, h4, h5, h6 {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Roboto', 'Arial', sans-serif;
 }
 
@@ -11,14 +17,14 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 .dancedeets-tagline {
-  font-size: 55px;
+  font-size: 50px;
   font-weight: 600;
   line-height: 63px;
   text-transform: uppercase;
 }
 
 .dancedeets-tagline-small {
-  font-size: 20px;
+  font-size: 18px;
   display: inline-block;
 }
 
@@ -28,19 +34,19 @@ body, h1, h2, h3, h4, h5, h6 {
 
 /* Buttons Color */
 .btn-u-split.dropdown-toggle {
-  border-left: solid 1px #8283A9;
+  border-left: solid 1px #8283a9;
 }
 
 /* Bordered Buttons */
 .btn-u.btn-brd {
-  border-color: #4F5086;
+  border-color: #4f5086;
 }
 .btn-u.btn-brd:hover {
-  color: #8283A9;
-  border-color: #8283A9;
+  color: #8283a9;
+  border-color: #8283a9;
 }
 .btn-u.btn-brd.btn-brd-hover:hover {
-  background: #8283A9;
+  background: #8283a9;
 }
 
 .panel {
@@ -77,7 +83,7 @@ body, h1, h2, h3, h4, h5, h6 {
   width: 100%;
   background-color: #000;
   opacity: 0.55;
-  transition: opacity .25s ease-out;
+  transition: opacity 0.25s ease-out;
 }
 .panel .panel-body a.zoom:hover span.overlay {
   display: block;
